--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fantasy-eithers": "0.0.2",
     "fantasy-identities": "0.0.1",
     "npm-run-all": "^2.1.1",
-    "standard": "^7.1.2"
+    "standard": "^7.1.2",
+    "xyz": "^0.5.0"
   }
 }
