--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "npm-run-all": "^2.1.1",
     "standard": "^7.1.2",
     "xyz": "^0.5.0"
+  },
+  "dependencies": {
+    "daggy": "0.0.1"
   }
 }
